Add Emotion Data Asset

--- a/EmotionEngine.uplugin
+++ b/EmotionEngine.uplugin
@@ -19,6 +19,11 @@
 			"Name": "EmotionEngine",
 			"Type": "Runtime",
 			"LoadingPhase": "Default"
+		},
+		{
+			"Name": "EmotionEngineEditor",
+			"Type": "Editor",
+			"LoadingPhase": "Default"
 		}
 	],
 	"Plugins": [
